fix(item-edit-list): dropdown menu on items are visible

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,11 @@ $border-color: rgba(0,0,0,.125);
 .bl-link-black:hover {
 	border-bottom: $link-border-black;
 }
+
+.ngx-datatable .datatable-body-cell {
+	overflow: visible !important;
+}
+
+.ngx-datatable {
+	overflow: visible !important;
+}
